--- a/style.css
+++ b/style.css
@@ -108,30 +108,29 @@ section{
     top: 20%;
     left: 5%;
     width: 70%;
-    height: auto;
+    height: 100px;
     justify-content: center;
-    border-radius:8px;
     overflow: hidden;
     background-color: none;
 }
 
 .roulette-wrapper{
-    position:relative;
-    display:flex;
-    justify-content:center;
-    width:100%;
-    margin:0 auto;
-    overflow:hidden;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    margin: 0 auto;
+    overflow: hidden
 }
   
 .roulette-wrapper .selector{
-    width:3px;
-    background:grey;
-    left:50%;
-    height:100%;
-    transform:translate(-50%,0%);
-    position:absolute;
-    z-index:2;
+    width: 3px;
+    background: grey;
+    left: 50%;
+    height: 83.4px;
+    transform: translate(-50%,0%);
+    position: absolute;
+    z-index: 2;
 }
   
 .roulette-wrapper .wheel{
@@ -160,6 +159,26 @@ section{
   
 .card.white, .card.black, .card.gold{
     background:#3e4b70;
+}
+
+#timer-container {
+    position: absolute;
+    width: 100%;
+    height: 10px;
+    background-color: #3e4b70;
+    bottom: 0;
+    border-radius: 50px;
+}
+  
+#timer-bar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: #d4a413;
+    transition: width 1s linear;
+    width: 100%;
+    border-radius: 50px;
 }
 
 /*###########################################################*/
